# minishell

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  minishell
inc/: minishell.h
inc/src/: ft_exe.c  main.c
libft/: Makefile  ft_putstr.c  get_next_line.h  libft.h
src/: cd_builtin.c  dop_func.c  echo_builtin.c  echo_strsplit.c  env_builtin.c  free_str.c  ft_exe.c  handle_errors.c  lenmas.c  main.c
